--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "eslint": "^8.15.0"
   }
 }
